--- a/src/main/resources/templates/User/profile-edit.html
+++ b/src/main/resources/templates/User/profile-edit.html
@@ -38,7 +38,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <h5 class="card-title mb-0">Редактирай Потребител</h5>
                             </div>
                             <div class="card-body">
-                                <form th:action="@{'/user/edit/' + ${user.id}}" method="get" th:object="${user}">
+                                <form th:action="@{'/user/edit/' + ${user.id}}" method="post" th:object="${user}">
                                     <!--                                    <form th:action="@{'/client/edit/' + ${client.id}}" method="get" th:object="${client}">-->
                                     <div class="form-group">
                                         <label for="username">Потребителско име</label>
@@ -65,6 +65,8 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <input type="email" class="form-control" id="email" name="email"
                                                th:field="*{email}" required>
                                     </div>
+                                    <input type="hidden" th:field="*{password}" th:value="${user.password}">
+                                    <input type="hidden" th:field="*{role}" th:value="${user.role}">
                                     <div class="text-center">
                                         <button type="submit" class="btn btn-primary">Редактирай</button>
                                     </div>
