Available products list not working

--- a/src/main/resources/templates/Product/show.html
+++ b/src/main/resources/templates/Product/show.html
@@ -51,6 +51,10 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <a href="/product/produce" class="btn btn-warning">Производство на продукт</a>
                             </div>
                         </th:block>
+                        <div>
+                            <div class="text-center">
+                            <a href="/product/available-products" style="margin: 20px;" class="btn btn-success">Налични продукти</a>
+                        </div>
                         <div class="card-body">
                             <div class="row mb-3">
                                 <div class="col">
